--- a/demo-app-VISION-TRACK/index.html
+++ b/demo-app-VISION-TRACK/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>triage-ai-quest</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Medical Triage AI Vision</title>
+    <meta name="description" content="AI-powered medical triage system with computer vision capabilities" />
+    <meta name="author" content="Medical Triage AI Team" />
 
-    <meta property="og:title" content="triage-ai-quest" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Medical Triage AI Vision" />
+    <meta property="og:description" content="AI-powered medical triage system with computer vision capabilities" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
